Completed the GET Handler & DataStore Func

--- a/configs/.env
+++ b/configs/.env
@@ -1,6 +1,6 @@
 # Settings
-APP_NAME=zopsamrt-assignment
-HTTP_PORT=9000
+# APP_NAME=zopsmart-assignment
+# bind-address= localhost
 
 # DB
 DB_HOST=localhost
